[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[project]
name = "EndUID"
version = "0.1.0"
description = "EndUID"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
